--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,65 @@
+altair==5.4.1
+annotated-types==0.7.0
+anyio==4.6.2.post1
+attrs==24.2.0
 blinker==1.8.2
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+exceptiongroup==1.2.2
+fastapi==0.115.4
 filelock==3.16.1
 Flask==3.0.3
 fsspec==2024.10.0
+gitdb==4.0.11
+GitPython==3.1.43
+h11==0.14.0
+idna==3.10
 importlib_metadata==8.5.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 mpmath==1.3.0
+narwhals==1.13.2
 networkx==3.2.1
 nltk==3.9.1
+numpy==2.0.2
+packaging==24.1
+pandas==2.2.3
+pillow==11.0.0
+protobuf==5.28.3
+pyarrow==18.0.0
+pydantic==2.9.2
+pydantic_core==2.23.4
+pydeck==0.9.1
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
+python-multipart==0.0.17
+pytz==2024.2
+referencing==0.35.1
 regex==2024.11.6
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+starlette==0.41.2
 sympy==1.13.1
+tenacity==9.0.0
+toml==0.10.2
 torch==2.5.1
+tornado==6.4.1
 tqdm==4.67.0
 typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+uvicorn==0.32.0
 Werkzeug==3.1.2
 zipp==3.20.2
